Tue Feb  9 19:11:43 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkstyle.c (gtk_style_new): If we can't find
	  helvetica, fall back to "fixed". If we can't
	  find "fixed", exit cleanly.

Tue Feb  9 16:03:44 1999  Owen Taylor  <otaylor@redhat.com>

	* acconfig.h configure.in: Rename 
	  XIM_INST_IS_MISSING_OR_STRANGE to USE_X11R6_XIM

	* Conditionalize destroy callbacks with USE_X11R6_XIM.

Tue Feb  9 15:35:13 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtklabel.c (gtk_label_style_set): Added
	  a style_set() function so that word lengths get
	  recomputed on style change.

Mon Feb  8 21:00:20 1999  Lars Hamann  <lars@gtk.org>

	* gtk/gtkclist.c (CLIST_OPTIMUM_SIZE): changed to 64
	(gtk_clist_draw_focus) (hadjustment_value_changed) (draw_row):
 	few fixes to respect GTK_CAN_FOCUS flag.

	* gtk/gtkctree.c (draw_row): 
 	respect GTK_CAN_FOCUS flag.

Mon Feb  8 19:22:27 GMT 1999 Tony Gale  <gale@gtk.org>

	* example/colorsel/*: missing from the CVS for some reason

Mon Feb  8 13:08:51 GMT 1999 Tony Gale  <gale@gtk.org>

	* examples/Makefile: add SpinButton example

Mon Feb  8 12:50:06 GMT 1999 Tony Gale  <gale@gtk.org>

	* docs/gtk_tut.sgml:
	  - Heavily edited GtkCombo section initially from
	    Christopher T. Lansdown <lansdoct@screech.cs.alfred.edu>.

	  - Cleanups and some glib stuff from
	    David Wheeler <wheeler@ida.org>

	* Makefile.am: update to include the latest Tutorial examples.

Sat Feb  6 11:20:16 1999  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_idle_draw): Add the
	entire draw_data_list back to the free list, not
	just the last element.

Sat Feb  6 00:21:14 1999  Lars Hamann  <lars@gtk.org>

	* gtk/gtkctree.c (draw_row): 
	* gtk/gtkclist.c (draw_row) (new_column_width) (scroll_horizontal)
	(title_focus): search last visible column instead of
	using clist->columns.

Fri Feb  5 13:23:50 1999  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkwindow.c (gdk_window_move_resize): Adjust