@@ -1,3 +1,12 @@
+Tue Feb  9 19:39:32 1999  Owen Taylor  <otaylor@redhat.com>
+
+        * gtk/gtkentry.[ch] gtk/gtkeditable.h: Moved
+	  entry->visible into editable class. (Leave it
+	  behind deprecated for compatibility)
+	 
+	* gtk/gtkeditable.c: If not editable->visible,
+	  return *'s for clipboard and selection.
+
 Tue Feb  9 19:11:43 1999  Owen Taylor  <otaylor@redhat.com>
 
 	* gtk/gtkstyle.c (gtk_style_new): If we can't find
